--- a/App.css
+++ b/App.css
@@ -79,3 +79,10 @@
   color: azure;
   padding: 50px;
 }
+
+.Counter {
+  background-color: brown;
+  color: blanchedalmond;
+  padding: 50px;
+  
+}
